@@ -34,7 +34,8 @@ Author
 ------
 
 This module was written by Tim Jenness  <t.jenness@jach.hawaii.edu>
-of the Joint Astronomy Centre.
+of the Joint Astronomy Centre. Some static functions added by Alasdair
+Allan <aa@astro.ex.ac.uk> to support his work on the eSTAR Project.
 
 Copyright (C) 2001-2002 Particle Physics and Astronomy Research Council.
 All Rights Reserved. This program is free software; you can
