@@ -1,3 +1,11 @@
+2003-07-16  Alasdair Allan <aa@astro.ex.ac.uk>
+
+        * WaveBand.pm: Added three static methods has_instrument(),
+          has_filter() and is_observable() which pretty much do exactly
+          what it says on the box. Check the inline POD for details.
+          Added a %TELESCOPE lookup hash to go along with the existing
+          %FILTERS lookup hash.
+          
 2003-05-30  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* WaveBand.pm: Update UIST filters.
